Fix navbar link alignment

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -39,6 +39,9 @@
   width: 182px;
   height: 48px;
   border: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .navbar-link:hover {
